Implement add contact, delete contact and show contact list in client side app

--- a/ClientApp/src/app/app.component.html
+++ b/ClientApp/src/app/app.component.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <header>
-    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark flex-grow-1 border-bottom mb-3">
+    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark flex-grow-1 border-bottom">
       <div class="container">
         <a class="navbar-brand">ZrakChat</a>
 
