--- a/ClientApp/src/app/chat/chat.component.html
+++ b/ClientApp/src/app/chat/chat.component.html
@@ -1,5 +1,17 @@
-<div class="search">
+<!--<div class="">
   <a class="nav-link" routerLink="./contacts">Contacts</a>
-</div>
+</div>-->
+
+<nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-transparent flex-grow-1 mb-3">
+  <div class="">
+    <div class="collapse navbar-collapse">
+      <ul class="nav navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" routerLink="./contacts" routerLinkActive="selected">Contacts</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
 
 <router-outlet></router-outlet>
