--- a/ClientApp/src/app/contacts/contacts.component.html
+++ b/ClientApp/src/app/contacts/contacts.component.html
@@ -1,1 +1,36 @@
-<p>contacts works!</p>
+<form class="form-inline text-light mb-3">
+  <div class="form-group-row">
+    <input class="form-control form-control-sm" type="text" name="searchTerm" [(ngModel)]="searchTerm" placeholder="Search contacts..." autocomplete="off" />
+  </div>
+  <button class="btn btn-sm btn-success ml-auto" (click)="openAddContactModal()">Add contact</button>
+</form>
+
+<table class="table table-striped table-hover text-light">
+  <caption>List of contacts</caption>
+  <tbody>
+    <tr *ngFor="let contact of getTableData()">
+      <th style="width: 92px">
+        <img class="img-responsive img-profile mr-2" src="assets/contact.ico">
+      </th>
+      <td>
+        <span class="text-success"><ngb-highlight [result]="contact.username" [term]="searchTerm"></ngb-highlight></span><br />
+        <ngb-highlight [result]="contact.displayName" [term]="searchTerm"></ngb-highlight>
+      </td>
+      <td>
+        <button class="btn btn-sm btn-danger float-right" (click)="deleteContact(contact)">Delete contact</button> <br />
+      </td>
+    </tr>
+  </tbody>
+</table>
+
+<div class="d-flex justify-content-between p-2">
+  <ngb-pagination [collectionSize]="total!" [(page)]="page" [pageSize]="pageSize">
+  </ngb-pagination>
+
+  <select class="custom-select" style="width: auto" name="pageSize" [(ngModel)]="pageSize">
+    <option [ngValue]="3">3 contacts per page</option>
+    <option [ngValue]="5">5 contacts per page</option>
+    <option [ngValue]="10">10 contacts per page</option>
+    <option [ngValue]="20">20 contacts per page</option>
+  </select>
+</div>
