--- a/ClientApp/src/styles.css
+++ b/ClientApp/src/styles.css
@@ -15,5 +15,37 @@ html, body {
 
 
 .toast-top-right {
-  margin-top: 85px;
+  margin-top: 75px;
+}
+
+.selected {
+  background: rgba(128, 128, 128, 0.6);
+  transition: .5s;
+  border-radius: 10px;
+}
+
+.img-profile {
+  width: 64px;
+  height: auto;
+  display: block;
+}
+
+/* modal animation */
+.modal-content {
+  animation-name: example;
+  animation-duration: 0.3s;
+}
+
+@keyframes example {
+  0% {
+    transform: scale(0.5)
+  }
+
+  75% {
+    transform: scale(1.1)
+  }
+
+  100% {
+    transform: scale(1)
+  }
 }
