--- a/ClientApp/src/app/register/register.component.html
+++ b/ClientApp/src/app/register/register.component.html
@@ -1,4 +1,4 @@
-<ng-spinner class="float-right" size="5" type="border" color="success" *ngIf="inProgress"></ng-spinner>
+<ng-spinner class="float-right mt-3" size="5" type="border" color="success" *ngIf="inProgress"></ng-spinner>
 
 <form class="form" [formGroup]="registerForm" (ngSubmit)="register(registerForm.value)">
   <h1>Register</h1>
