--- a/ClientApp/src/app/app.component.html
+++ b/ClientApp/src/app/app.component.html
@@ -37,7 +37,7 @@
     </nav>
 
   </header>
-  <div class="container">
+  <div class="container" style="height: 100%;">
     <router-outlet></router-outlet>
   </div>
 </body>
