--- a/ClientApp/src/app/login/login.component.html
+++ b/ClientApp/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<ng-spinner class="float-right" size="5" type="border" color="success" *ngIf="inProgress"></ng-spinner>
+<ng-spinner class="float-right mt-3" size="5" type="border" color="success" *ngIf="inProgress"></ng-spinner>
 
 <form class="form" [formGroup]="loginForm" (ngSubmit)="login(loginForm.value)">
   <h1>Login</h1>
