--- a/ClientApp/src/app/chat/chat.component.html
+++ b/ClientApp/src/app/chat/chat.component.html
@@ -2,10 +2,13 @@
   <a class="nav-link" routerLink="./contacts">Contacts</a>
 </div>-->
 
-<nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-transparent flex-grow-1 mb-3">
+<nav class="navbar navbar-expand navbar-toggleablem navbar-dark bg-transparent flex-grow-1 mb-3">
   <div class="">
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" routerLink="./home" routerLinkActive="selected">Home</a>
+        </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="./contacts" routerLinkActive="selected">Contacts</a>
         </li>
