--- a/ClientApp/src/app/contacts/contacts.component.html
+++ b/ClientApp/src/app/contacts/contacts.component.html
@@ -3,9 +3,11 @@
     <input class="form-control form-control-sm" type="text"
            name="searchTerm" [(ngModel)]="searchTerm" placeholder="Search contacts..." autocomplete="off" />
   </div>
-  <button class="btn btn-sm btn-success ml-auto" (click)="openAddContactModal(content)">Add contact</button>
 </form>
 
+<div class="text-center mb-3">
+  <ng-spinner class="mt-3" size="5" type="border" color="" *ngIf="!contactService.dataLoaded"></ng-spinner>
+</div>
 <table class="table table-striped table-hover text-light">
   <caption>List of contacts</caption>
   <tbody>
@@ -20,6 +22,11 @@
       <td>
         <button class="btn btn-sm btn-danger float-right" (click)="deleteContact(contact)">Delete contact</button> <br />
       </td>
+    </tr>
+    <tr>
+      <th></th>
+      <td></td>
+      <td><button class="btn btn-sm btn-success float-right" (click)="openAddContactModal(content)">Add contact</button></td>
     </tr>
   </tbody>
 </table>
