--- a/ClientApp/src/app/chat-home/chat-home.component.css
+++ b/ClientApp/src/app/chat-home/chat-home.component.css
@@ -9,7 +9,9 @@
   background: rgba(32, 32, 32, 0.9);
   padding: 5px;
   margin-bottom: 15px;
-  box-shadow: 0 1px 5px grey;
+  box-shadow: 1px 2px 5px grey;
+  border-radius: 10px;
+  z-index: 1;
 }
 
   .room:hover {
@@ -31,8 +33,26 @@
 
 .send_btn {
   border-radius: 0 15px 15px 0;
-  background-color: rgba(0, 0, 0, 0.3);
   border: 0;
   color: white;
   cursor: pointer;
+}
+
+.add_btn {
+  background: none;
+  border: 0;
+  outline: none;
+}
+
+.message {
+  max-width: 40%;
+  padding: 5px;
+  margin: 10px 5px;
+  background: rgba(255, 255, 255, 0.2);
+  border-radius: 15px;
+}
+
+.message-self {
+  background: rgba(0, 188, 140, 0.2);
+  margin-left: auto;
 }
