--- a/ClientApp/src/app/chat-home/chat-home.component.html
+++ b/ClientApp/src/app/chat-home/chat-home.component.html
@@ -1,19 +1,67 @@
-<div class="row">
-  <div class="col-4 border-right">
+<div class="row" style="height: 77.5%; padding: 5px; border-radius: 5px; box-shadow: 0px 0px 25px grey;">
+  <div class="col-4 col-lg-3 h-100" style="overflow-y: scroll;">
+    <form class="form-inline text-light mb-3">
+      <div class="form-group-row">
+        <input class="form-control form-control-sm" type="text"
+               name="searchTerm" [(ngModel)]="searchTerm" placeholder="Search rooms..." autocomplete="off" />
+      </div>
+    </form>
+    <button class="add_btn text-success mb-3" title="New private chat" (click)="openNewPrivateChatModal(content)">+<i class="fa fa-user" aria-hidden="true"></i></button>
     <div class="text-center">
       <ng-spinner class="mt-3" size="5" type="border" color="" *ngIf="!roomService.dataLoaded"></ng-spinner>
     </div>
-    <div class="room" *ngFor="let room of roomService.rooms">
-      <p class="text-info">@{{ room.displayName }}</p>
-      <p class="text-muted font-italic">You: EE gde...</p>
+    <div class="room" *ngFor="let room of getTableData()" (click)="openRoom(room)">
+      <p class="text-success">{{ room.displayName }}</p>
+      <p class="text-muted font-italic" *ngIf="!room.lastMessage; else lastMessage">No messages</p>
+      <ng-template #lastMessage>
+        <p class="text-muted font-italic" *ngIf="userService.currentUserValue.username === room.lastMessage.username">You: {{ room.lastMessage.text.substring(0, 15) }}...</p>  
+        <p class="text-muted font-italic" *ngIf="userService.currentUserValue.username !== room.lastMessage.username">{{ room.lastMessage.username }}: {{ room.lastMessage.text.substring(0, 15) }}...</p>  
+        <p class="text-info font-italic">{{ room.lastMessage.sent | date:'short'}}</p>
+      </ng-template>
     </div>
   </div>
-  <div class="col-8 border-bottom">
-    <form class="input-group">
-      <input name="Text" class="form-control type_msg" autocomplete="off" />
+  <div class="col-8 col-lg-9 h-100" style="display: flex; flex-direction: column;">
+    <div class="text-center mt-5">
+      <ng-spinner size="5" type="border" color="" *ngIf="isLoading"></ng-spinner>
+    </div>
+    <div class="mb-5" *ngIf="room && room.messages" style="overflow-y: auto;">
+      <p class="text-muted text-center font-italic" *ngIf="room.messages.length === 0; else showMessages">This conversation is empty</p>
+      <ng-template #showMessages>
+        <div class="message" [class.message-self]="message.username === userService.currentUserValue.username" *ngFor="let message of room.messages">
+          <p>{{ message.text }}</p>
+        </div>
+      </ng-template>
+    </div>
+    <form class="input-group mt-auto" style="position: sticky; bottom: 0;" *ngIf="room">
+      <input name="Text" class="form-control type_msg" autocomplete="off" [(ngModel)]="message" />
       <div class="input-group-append">
-        <input type="submit" value="Send" class="input-group-text send_btn" />
+        <input type="submit" value="Send" class="input-group-text btn send_btn" [disabled]="!message" (click)="sendMessage()" />
       </div>
     </form>
   </div>
 </div>
+
+<ng-template #content let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title" id="modal-basic">New private chat</h4>
+    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">
+    <div class="form-inline">
+      <div class="form-group-row">
+        <input class="form-control form-control-sm" id="searchResult" type="text" placeholder="Search users..."
+               [(ngModel)]="user" [ngbTypeahead]="search" [inputFormatter]="formatter"
+               [resultFormatter]="formatter"
+               [editable]='false' />
+      </div>
+      <button class="btn btn-sm btn-success ml-auto" (click)="addPrivateChat()" [disabled]="!user">
+        <i class="fa fa-plus" aria-hidden="true"></i>
+      </button>
+    </div>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-primary" (click)="modal.close()">Close</button>
+  </div>
+</ng-template> 
