--- a/ClientApp/src/app/chat/chat.component.html
+++ b/ClientApp/src/app/chat/chat.component.html
@@ -1,8 +1,4 @@
-<!--<div class="">
-  <a class="nav-link" routerLink="./contacts">Contacts</a>
-</div>-->
-
-<nav class="navbar navbar-expand navbar-toggleablem navbar-dark bg-transparent flex-grow-1 mb-3">
+<nav id="nav" class="navbar navbar-expand navbar-toggleablem navbar-dark bg-transparent flex-grow-1 mb-3">
   <div class="">
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
