Show if other user in private chat is online

--- a/ClientApp/src/app/chat-home/chat-home.component.css
+++ b/ClientApp/src/app/chat-home/chat-home.component.css
@@ -12,11 +12,12 @@
   box-shadow: 1px 2px 5px grey;
   border-radius: 10px;
   z-index: 1;
+  cursor: pointer;
 }
 
-  .room:hover {
-    background: rgba(64, 64, 64, 0.9);
-  }
+.room-selected {
+  background: rgba(64, 64, 64, 0.9);
+}
 
 .type_msg {
   background-color: rgba(0, 0, 0, 0.3);
