--- a/ClientApp/src/app/chat-home/chat-home.component.html
+++ b/ClientApp/src/app/chat-home/chat-home.component.html
@@ -1,6 +1,9 @@
 <div class="row" style="height: 77.5%; padding: 5px; border-radius: 5px; box-shadow: 0px 0px 25px grey;">
   <div class="col-4 col-lg-3 h-100" style="overflow-y: scroll;">
-    <button class="add_btn text-success mb-3 mt-1" title="New private chat" (click)="openNewPrivateChatModal(content)">+<i class="fa fa-user" aria-hidden="true"></i></button>
+    <div>
+      <button class="add_btn text-success mb-3 m-1" title="New private chat" (click)="openModal(content)">+<i class="fa fa-user" aria-hidden="true" style="font-size: 16px;"></i></button>
+      <button class="add_btn text-success mb-3 m-1" title="New group chat" (click)="openModal(content2)">+<i class="fa fa-users" aria-hidden="true" style="font-size: 16px;"></i></button>
+    </div>
     <form class="form-inline text-light mb-3">
       <div class="form-group-row">
         <input class="form-control form-control-sm" type="text"
@@ -28,8 +31,15 @@
       <ng-spinner size="5" type="border" color="" *ngIf="isLoading"></ng-spinner>
     </div>
     <div *ngIf="selectedRoom && selectedRoom.messages" style="overflow-y: auto;">
+      <div class="bg-dark d-flex border-bottom" style="position: sticky; top: 0" *ngIf="isGroup()">
+        <p class="m-1" *ngFor="let member of selectedRoom.members">
+          {{ member.username }} 
+          <i class="fa fa-circle text-success" aria-hidden="true" *ngIf="member.isConnected" title="User is online"></i>
+        </p>
+      </div>
       <p class="text-muted text-center font-italic" *ngIf="selectedRoom.messages.length === 0; else showMessages">This conversation is empty</p>
       <ng-template #showMessages>
+        <div *ngFor="let typingUser of typing | async">{{ typingUser }} is typing...</div>
         <div class="message" [class.message-self]="message.username === userService.currentUserValue.username" *ngFor="let message of selectedRoom.messages" @fadeIn>
           <p class="font-italic">{{ message.username }}</p>
           <p class="text-justify">{{ message.text }}</p>
@@ -38,7 +48,7 @@
       </ng-template>
     </div>
     <form class="input-group mt-auto" style="position: sticky; bottom: 0;" *ngIf="selectedRoom">
-      <input name="Text" class="form-control type_msg" autocomplete="off" [(ngModel)]="message" />
+      <input name="Text" class="form-control type_msg" autocomplete="off" [(ngModel)]="message" (ngModelChange)="notifyTyping($event)" />
       <div class="input-group-append">
         <input type="submit" value="Send" class="input-group-text btn send_btn" [disabled]="!message" (click)="sendMessage()" />
       </div>
@@ -65,6 +75,32 @@
         <i class="fa fa-plus" aria-hidden="true"></i>
       </button>
     </div>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-primary" (click)="modal.close()">Close</button>
+  </div>
+</ng-template> 
+
+<ng-template #content2 let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title" id="modal-basic">New group chat</h4>
+    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">
+    <!-- <div class="form-inline">
+      <div class="form-group-row">
+        <input class="form-control form-control-sm" id="searchResult" type="text" placeholder="Search users..."
+               [(ngModel)]="user" [ngbTypeahead]="search" [inputFormatter]="formatter"
+               [resultFormatter]="formatter"
+               [editable]='false' />
+      </div>
+      <button class="btn btn-sm btn-success ml-auto" (click)="addPrivateChat()" [disabled]="!user">
+        <i class="fa fa-plus" aria-hidden="true"></i>
+      </button>
+    </div> -->
+    Not implemented YET!
   </div>
   <div class="modal-footer">
     <button type="button" class="btn btn-primary" (click)="modal.close()">Close</button>
