Improve real -time messaging and fix bugs. Implement "new message" room indicator (shows room with yellowish background if there is unread message)

--- a/ClientApp/src/app/chat-home/chat-home.component.css
+++ b/ClientApp/src/app/chat-home/chat-home.component.css
@@ -15,6 +15,10 @@
   cursor: pointer;
 }
 
+.room-new-message {
+  background: rgba(80, 80, 32, 0.6);
+}
+
 .room-selected {
   background: rgba(64, 64, 64, 0.9);
 }
