--- a/ClientApp/src/app/chat-home/chat-home.component.html
+++ b/ClientApp/src/app/chat-home/chat-home.component.html
@@ -77,7 +77,7 @@
                [resultFormatter]="formatter"
                [editable]='false' />
       </div>
-      <button class="btn btn-sm btn-success ml-auto" (click)="addPrivateChat()" [disabled]="!user">
+      <button class="btn btn-sm btn-success ml-auto" (click)="addPrivateChat()" [disabled]="!user" title="Add private chat">
         <i class="fa fa-plus" aria-hidden="true"></i>
       </button>
     </div>
@@ -95,20 +95,30 @@
     </button>
   </div>
   <div class="modal-body">
-    <!-- <div class="form-inline">
+    <input class="form-control form-control-sm mb-3" type="text" placeholder="Group name"
+             [(ngModel)]="groupName" />
+  
+    <div class="form-inline">
       <div class="form-group-row">
         <input class="form-control form-control-sm" id="searchResult" type="text" placeholder="Search users..."
                [(ngModel)]="user" [ngbTypeahead]="search" [inputFormatter]="formatter"
                [resultFormatter]="formatter"
                [editable]='false' />
       </div>
-      <button class="btn btn-sm btn-success ml-auto" (click)="addPrivateChat()" [disabled]="!user">
+      <button class="btn btn-sm btn-success ml-auto" (click)="addMember(user)" [disabled]="!user" title="Add user to the group">
         <i class="fa fa-plus" aria-hidden="true"></i>
       </button>
-    </div> -->
-    Not implemented YET!
+    </div>
+
+    <div class="d-flex" style="flex-wrap: wrap;">
+      <div class="d-flex m-2 p-2" *ngFor="let member of members" style="background: rgba(32, 32, 32, 0.7)">
+        <p>{{ member.username }}</p>
+        <i class="fa fa-times" aria-hidden="true" (click)="removeMember(member)" title="Remove user from the group" *ngIf="member.id !== this.userService.currentUserValue.id"></i>
+      </div>
+    </div>
   </div>
   <div class="modal-footer">
     <button type="button" class="btn btn-primary" (click)="modal.close()">Close</button>
+    <button type="button" class="btn btn-primary" (click)="addGroupChat()" [disabled]="!groupName || groupName.length > 30 || members.length < 3">Create group</button>
   </div>
 </ng-template> 
